# agenttrace-foundry

./: .gitignore  DEMO_SCRIPT.md  DEPLOY.md  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
examples/: leaderboard_demo.py
src/agenttrace_foundry/: __init__.py  cache.py  coach.py  cost.py  drift.py  provider.py  trace.py  vet.py
tests/: test_cache.py  test_coach.py  test_cost.py  test_drift.py  test_provider.py  test_trace.py  test_vet.py
