[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttrace-foundry"
version = "0.1.0"
description = "Reasoning-agent QA coach for Microsoft Foundry: cost-per-success, tool-arg-failure rate, p50/p95 latency, drift-vs-baseline."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" },
]
keywords = ["llm", "agent", "microsoft-foundry", "observability", "cost", "drift"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agenttrace-foundry"
Repository = "https://github.com/MukundaKatta/agenttrace-foundry"
Issues = "https://github.com/MukundaKatta/agenttrace-foundry/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
